Bug 1623286: Fire offscreen state change a11y events when a XUL tab panel is switched. r=eeejay

Without this, the AT-SPI cache isn't updated and Orca mouse review fails after switching tabs.

Differential Revision: https://phabricator.services.mozilla.com/D101428